Работа с шапкой на странице

--- a/source/index.html
+++ b/source/index.html
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru"  class="no-js">
 <head>
-	<meta charset="UTF-8">
-	<title>Gratia</title>
-	
+  <meta charset="UTF-8">
+  <title>Gratia</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+  <header class="page-header">
+    <div class="page-header__inner">
+      <a href="" class="page-header__logo">
+        <img  class="page-header__image" src="img/logo.png" width="34" height="34" alt="Логотип">
+        <p>Gratia</p>
+      </a>
+      <nav class="main-nav">
+        <ul class="main-nav__list">
+          <li class="main-nav__item">
+            <a href="#" class="main-nav__link">About</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="#" class="main-nav__link">Menu</a>
+          </li>
+          <li class="main__nav-item">
+            <a href="#" class="main-nav__link">Gallery</a>
+          </li>
+          <li class="main__nav-item">
+            <a href="#" class="main-nav__link">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="slider">
+      <div class="slider__descr">
+        <img class="slider__image" src="img/KE.png" width="1280" height="805" alt="Картинка">
+      </div>
+      <div class="slider__nav">
+        <div class="slider__arrow">Влево</div>
+        <div class="slider__arrow">Вправо</div>
+      </div>
+      <ul class="slider__list">
+        <li class="slider__item">01</li>
+        <li class="slider__item">02</li>
+        <li class="slider__item">03</li>
+      </ul>
+      <p>and perfection is  not a detail</p>
+      <a href="#" class="slider__link">Book a table</a>
+    </div>
+  </header>
+  <main class="page-main">
+    <section class="promo">
+      <h2 class="promo__title">Perfection</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <ul class="promo__list">
+        <li class="promo__item">
+          <img src="" alt="" class="promo__title">
+          <h3>Desserts</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </li>
+        <li class="promo__item">
+          <img src="" alt="" class="promo__title">
+          <h3>Smoothies</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </li>
+        <li class="promo__item">
+          <img src="" alt="" class="promo__title">
+          <h3>Breakfast</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
