Доработки шапки страницы

--- a/source/index.html
+++ b/source/index.html
@@ -32,10 +32,9 @@
     <div class="slider">
       <div class="slider__descr">
         <img class="slider__image" src="img/KE.png" width="1280" height="805" alt="Картинка">
-      </div>
-      <div class="slider__nav">
-        <div class="slider__arrow">Влево</div>
-        <div class="slider__arrow">Вправо</div>
+        <img class="slider__foto" src="img/slider1.png" alt="">
+        <div class="slider__arrow  slider__arrow--left"><img src="img/Arrow-left.png" width="57" height="111" alt="Влево"></div>
+        <div class="slider__arrow  slider__arrow--right"><img src="img/Arrow-right.png" width="57" height="111" alt="Вправо"></div>
       </div>
       <ul class="slider__list">
         <li class="slider__item">01</li>
