Сделали шапку и начали блок продукта

--- a/source/index.html
+++ b/source/index.html
@@ -36,34 +36,40 @@
         <div class="slider__arrow  slider__arrow--left"><img src="img/Arrow-left.png" width="57" height="111" alt="Влево"></div>
         <div class="slider__arrow  slider__arrow--right"><img src="img/Arrow-right.png" width="57" height="111" alt="Вправо"></div>
       </div>
-      <ul class="slider__list">
-        <li class="slider__item">01</li>
-        <li class="slider__item">02</li>
-        <li class="slider__item">03</li>
-      </ul>
-      <p>and perfection is  not a detail</p>
-      <a href="#" class="slider__link">Book a table</a>
+      <div  class="slider__wrapper">
+        <ul class="slider__list">
+          <li class="slider__item">01</li>
+          <li class="slider__item">02</li>
+          <li class="slider__item">03</li>
+        </ul>
+        <div class="slider__text">
+          <p>and perfection is  not a detail</p>
+        </div>
+        <a href="#" class="slider__btn">Book a table</a>
+      </div>
     </div>
   </header>
   <main class="page-main">
-    <section class="promo">
-      <h2 class="promo__title">Perfection</h2>
+    <section class="product">
+      <h2 class="product__title">Perfection</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <ul class="promo__list">
-        <li class="promo__item">
-          <img src="" alt="" class="promo__title">
-          <h3>Desserts</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <ul class="product__list  flashcard">
+        <li class="flashcard__item">
+          <img src="img/Dark-dessert.jpg" width="651" height="490" alt="Дессерт" class="flashcard__image">
+          <div class="flashcard__inner">
+            <h3 class="flashcard__title">Desserts</h3>
+            <p class="flashcard__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
         </li>
-        <li class="promo__item">
-          <img src="" alt="" class="promo__title">
-          <h3>Smoothies</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <li class="flashcard__item">
+          <img class="flashcard__image" src="img/Photo-smoot.jpg" width="569" height="699" alt="Картинка">
+          <h3 class="flashcard__title">Smoothies</h3>
+          <p class="flashcard__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </li>
-        <li class="promo__item">
-          <img src="" alt="" class="promo__title">
-          <h3>Breakfast</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <li class="flashcard__item">
+          <img src="img/Dark-brecfast.jpg" width="650" height="490" alt="Завтрак" class="flashcard__image">
+          <h3 class="flashcard__title">Breakfast</h3>
+          <p class="flashcard__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </li>
       </ul>
     </section>
