--- a/source/index.html
+++ b/source/index.html
@@ -68,8 +68,10 @@
         </li>
         <li class="flashcard__item">
           <img src="img/Dark-brecfast.jpg" width="650" height="490" alt="Завтрак" class="flashcard__image">
-          <h3 class="flashcard__title">Breakfast</h3>
-          <p class="flashcard__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <div class="flashcard__inner">
+            <h3 class="flashcard__title">Breakfast</h3>
+            <p class="flashcard__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
         </li>
       </ul>
     </section>
