Доработки главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -59,22 +59,28 @@
         <li class="flashcard__item  flashcard__item--desser">
           <img src="img/Dark-dessert.jpg" width="651" height="490" alt="Дессерт" class="flashcard__image">
           <div class="flashcard__inner">
-            <h3 class="flashcard__title">Desserts</h3>
-            <p class="flashcard__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a class="flashcard__link"  href="#">
+              <h3 class="flashcard__title">Desserts</h3>
+              <p class="flashcard__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
           </div>
         </li>
         <li class="flashcard__item  flashcard__item--smooth">
           <img  class="flashcard__image flashcard__image--foto" src="img/Photo-smoot.jpg" width="569" height="699" alt="Картинка">
           <div class="flashcard__inner  flashcard__inner--item">
-            <h3 class="flashcard__title  flashcard__title--name">Smoothies</h3>
-            <p class="flashcard__text  flashcard__text--desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a class="flashcard__link"  href="#">
+              <h3 class="flashcard__title  flashcard__title--name">Smoothies</h3>
+              <p class="flashcard__text  flashcard__text--desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
           </div>
         </li>
         <li class="flashcard__item  flashcard__item--breakf">
           <img src="img/Dark-brecfast.jpg" width="650" height="490" alt="Завтрак" class="flashcard__image">
           <div class="flashcard__inner">
-            <h3 class="flashcard__title">Breakfast</h3>
-            <p class="flashcard__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a class="flashcard__link"  href="#">
+              <h3 class="flashcard__title">Breakfast</h3>
+              <p class="flashcard__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </a>
           </div>
         </li>
       </ul>
@@ -82,12 +88,36 @@
     </section>
     <section class="information">
       <div class="information__wrapper">
-        <div class="information__inner">
-          <h2 class="information__title">Details</h2>
-          <p class="information__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a class="information__link" href="#">Preparation of our dishes</a>
-        </div>
+        <h2 class="information__title">Details</h2>
+        <p class="information__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <a class="information__link" href="#">Preparation of our dishes</a>
       </div>
+    </section>
+    <section class="promo">
+      <div class="promo__wrapper">
+        <h3 class="promo__title">How we reach this?</h3>
+        <p class="promo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <ul class="promo__list">
+        <li class="promo__item">
+          <div class="promo__inner">
+            <h3 class="promo__name">Diffrent location</h3>
+            <p class="promo__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </li>
+        <li class="promo__item">
+          <div class="promo__inner">
+            <h3 class="promo__name">Fresh products</h3>
+            <p class="promo__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </li>
+        <li class="promo__item">
+          <div class="promo__inner">
+            <h3 class="promo__name">The best from the beggining</h3>
+            <p class="promo__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </li>
+      </ul>
     </section>
   </main>
 </body>
