Доработки промо-блока

--- a/source/index.html
+++ b/source/index.html
@@ -99,19 +99,19 @@
         <p class="promo__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
       <ul class="promo__list">
-        <li class="promo__item">
+        <li class="promo__item  promo__item--locat">
           <div class="promo__inner">
             <h3 class="promo__name">Diffrent location</h3>
             <p class="promo__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </li>
-        <li class="promo__item">
-          <div class="promo__inner">
+        <li class="promo__item  promo__item--fon  promo__item--fresh">
+          <div class="promo__inner  promo__inner--box">
             <h3 class="promo__name">Fresh products</h3>
-            <p class="promo__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p class="promo__text-block  promo__text-block--color">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           </div>
         </li>
-        <li class="promo__item">
+        <li class="promo__item  promo__item--best">
           <div class="promo__inner">
             <h3 class="promo__name">The best from the beggining</h3>
             <p class="promo__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
