Начали подвал на главной

--- a/source/index.html
+++ b/source/index.html
@@ -120,5 +120,14 @@
       </ul>
     </section>
   </main>
+  <footer class="page-footer">
+    <a href="#" class="page-footer__logo"><img src="img/Logo-footer.png" width="81" height="81" alt=""></a>
+    <b class="page-footer__title">Gratia Restaurant</b>
+    <ul class="social">
+      <li class="social__item"><a href="#" class="social__link"><img src="img/FB-social.png" width="25" height="26" alt="Фейсбук"></a></li>
+      <li class="social__item"><a href="#" class="social__link"><img src="img/TR-social.png" width="25" height="26" alt="Тввитер"></a></li>
+      <li class="social__item"><a href="#" class="social__link"><img src="img/IG-social.png" width="25" height="26" alt="Инстаграмм"></a></li>
+    </ul>
+  </footer>
 </body>
 </html>
