--- a/source/index.html
+++ b/source/index.html
@@ -121,12 +121,13 @@
     </section>
   </main>
   <footer class="page-footer">
+    <div class="page-footer__box"></div>
     <a href="#" class="page-footer__logo"><img src="img/Logo-footer.png" width="81" height="81" alt=""></a>
     <b class="page-footer__title">Gratia Restaurant</b>
     <ul class="social">
-      <li class="social__item"><a href="#" class="social__link"><img src="img/FB-social.png" width="25" height="26" alt="Фейсбук"></a></li>
-      <li class="social__item"><a href="#" class="social__link"><img src="img/TR-social.png" width="25" height="26" alt="Тввитер"></a></li>
-      <li class="social__item"><a href="#" class="social__link"><img src="img/IG-social.png" width="25" height="26" alt="Инстаграмм"></a></li>
+      <li class="social__item"><a href="#" class="social__link"><img class="social__image" src="img/FB-social.png" width="25" height="26" alt="Фейсбук"></a></li>
+      <li class="social__item"><a href="#" class="social__link"><img class="social__image" src="img/TR-social.png" width="25" height="26" alt="Тввитер"></a></li>
+      <li class="social__item"><a href="#" class="social__link"><img class="social__image" src="img/IG-social.png" width="25" height="26" alt="Инстаграмм"></a></li>
     </ul>
   </footer>
 </body>
