--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
             <a href="#" class="main-nav__link">About</a>
           </li>
           <li class="main-nav__item">
-            <a href="#" class="main-nav__link">Menu</a>
+            <a href="menu.html" class="main-nav__link">Menu</a>
           </li>
           <li class="main__nav-item">
             <a href="#" class="main-nav__link">Gallery</a>
