--- a/source/menu.html
+++ b/source/menu.html
@@ -8,7 +8,7 @@
 <body>
   <header class="page-header  page-header--menu">
     <div class="page-header__inner  page-header__inner--line">
-      <a href="" class="page-header__logo">
+      <a href="index.html" class="page-header__logo">
         <img  class="page-header__image" src="img/logo.png" width="34" height="34" alt="Логотип">
         <p>Gratia</p>
       </a>
@@ -29,5 +29,58 @@
         </ul>
       </nav>
     </div>
+  </header>
+  <main class="page-main">
+    <section class="catalog">
+      <div class="catalog__wrapper">
+        <h2 class="catalog__title">Menu</h2>
+        <p class="catalog__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </div>
+      <ul class="catalog__list">
+        <li class="catalog__item">
+          <a href="" class="catalog__link">
+            <img class="catalog__image" src="img/dishes.jpg" width="562" height="411" alt="Основное блюдо">
+            <h3 class="catalog__name">Main dishes</h3>
+          </a>
+          <p class="catalog__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </li>
+        <li class="catalog__item">
+          <a href="" class="catalog__link">
+            <img src="img/soups.jpg" width="562" height="411" alt="Супы" class="catalog__image">
+            <h3 class="catalog__name">Soups</h3>
+          </a>
+          <p class="catalog__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </li>
+        <li class="catalog__item">
+          <a href="" class="catalog__link">
+            <img src="img/hamburger.jpg" width="562" height="411" alt="Гамбургер" class="catalog__image">
+            <h3 class="catalog__name">Hamburgers</h3>
+          </a>
+          <p class="catalog__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </li>
+        <li class="catalog__item">
+          <a href="" class="catalog__link">
+            <img src="img/dessert.jpg" width="562" height="411" alt="Дессерты" class="catalog__image">
+            <h3 class="catalog__name">Desserts</h3>
+          </a>
+          <p class="catalog__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </li>
+        <li class="catalog__item">
+          <a href="" class="catalog__link">
+            <img src="img/barbecue.jpg" width="562" height="411" alt="Барбекю" class="catalog__image">
+            <h3 class="catalog__name">Barbecue</h3>
+          </a>
+          <p class="catalog__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </li>
+        <li class="catalog__item">
+          <a href="" class="catalog__link">
+            <img src="" alt="" class="catalog__image">
+            <h3 class="catalog__name">Salads</h3>
+          </a>
+          <p class="catalog__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
