Закончили страницу меню

--- a/source/menu.html
+++ b/source/menu.html
@@ -39,7 +39,7 @@
       <ul class="catalog__list">
         <li class="catalog__item">
           <a href="" class="catalog__link">
-            <img class="catalog__image" src="img/dishes.jpg" width="562" height="411" alt="Основное блюдо">
+            <img class="catalog__image" src="img/dishes.jpg" width="562" height="411"  alt="Основное блюдо">
             <h3 class="catalog__name">Main dishes</h3>
           </a>
           <p class="catalog__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -74,7 +74,7 @@
         </li>
         <li class="catalog__item">
           <a href="" class="catalog__link">
-            <img src="" alt="" class="catalog__image">
+            <img src="img/salads.jpg" width="562" height="411" alt="Салаты" class="catalog__image">
             <h3 class="catalog__name">Salads</h3>
           </a>
           <p class="catalog__text-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -82,5 +82,15 @@
       </ul>
     </section>
   </main>
+  <footer class="page-footer">
+    <div class="page-footer__box"></div>
+    <a href="index.html" class="page-footer__logo"><img src="img/Logo-footer.png" width="81" height="81" alt="Логотип"></a>
+    <b class="page-footer__title">Gratia Restaurant</b>
+    <ul class="social">
+      <li class="social__item"><a href="#" class="social__link"><img class="social__image" src="img/FB-social.png" width="25" height="26" alt="Фейсбук"></a></li>
+      <li class="social__item"><a href="#" class="social__link"><img class="social__image" src="img/TR-social.png" width="25" height="26" alt="Тввитер"></a></li>
+      <li class="social__item"><a href="#" class="social__link"><img class="social__image" src="img/IG-social.png" width="25" height="26" alt="Инстаграмм"></a></li>
+    </ul>
+  </footer>
 </body>
 </html>
